<resources>
    <string name="app_name">SCM数据处理系统</string>
    <string name="select_setting">设置</string>
    <string name="on_direct_current">通电直流电流</string>
    <string name="off_direct_current">断电直流电流</string>
    <string name="on_ac_current">通电交流电流</string>
    <string name="off_ac_current">断电交流电流</string>

    <string name="on_direct_voltage">通电直流电压</string>
    <string name="off_direct_voltage">断电直流电压</string>
    <string name="on_ac_voltage">通电交流电压</string>
    <string name="off_ac_voltage">断电交流电压</string>

    <string name="pxg_direct_voltage">平行管道直流电位梯度</string>
    <string name="cz_direct_voltage">垂直管道直流电位梯度</string>
    <string name="pxg_ac_voltage">平行管道交流电位梯度</string>
    <string name="cz_ac_voltage">垂直管道交流电位梯度</string>

    <string name="save_success">保存成功</string>
    <string name="save_faile">保存失败</string>

    <string name="save">保存</string>
    <string name="save_kml">保存KML文件</string>
    <string name="see_kml">查看KML文件</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>

    <string name="delect">清除数据</string>
    <string name="save_data">数据另存为</string>
    <string name="create_key">生成校验码</string>
    <string name="equipment_code">请输入设备编号</string>
    <string name="please_write">请输入正确设备编号</string>

    <string name="delect_success">清除成功</string>
    <string name="delect_faile">清除失败</string>

    <string name="no_data">暂无数据</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>