<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seekBar1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/back">

        <LinearLayout
            android:id="@+id/linSetting"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="#e0a70e"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivOpen"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_select1" />

            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_setting"
                android:textColor="@color/white"
                android:textSize="13dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/radionStartDate"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="开始时间" />

                    <TextView
                        android:id="@+id/tvOffDirectCurrent"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/holo_red_dark"
                        android:text="@string/off_direct_current" />

                    <TextView
                        android:id="@+id/tvOffDirectVoltage"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/off_direct_voltage" />

                    <TextView
                        android:id="@+id/tvOffACCurrent"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/off_ac_current" />

                    <TextView
                        android:id="@+id/tvOffACVoltage"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/off_ac_voltage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvEndTime"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="结束时间" />

                    <TextView
                        android:id="@+id/tvOnDirectCurrent"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/on_direct_current" />

                    <TextView
                        android:id="@+id/tvOnDirectVoltage"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/on_direct_voltage" />

                    <TextView
                        android:id="@+id/tvOnACCurrent"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/on_ac_current" />

                    <TextView
                        android:id="@+id/tvOnACVoltage"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/on_ac_voltage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSaveImg"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="保存图片" />


                    <TextView
                        android:id="@+id/tvOnPXGDirectTD"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/pxg_direct_voltage" />
                    <TextView
                        android:id="@+id/tvOnCZDirectTD"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/cz_direct_voltage" />

                    <TextView
                        android:id="@+id/tvOnPXGACTD"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/pxg_ac_voltage" />

                    <TextView
                        android:id="@+id/tvOnCZACTD"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/cz_ac_voltage" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSave"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/save_data" />
                    <TextView
                        android:id="@+id/tvKML"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/save_kml" />

                    <TextView
                        android:id="@+id/tvOpen"
                        style="@style/RadionButton"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/see_kml" />

                    <TextView
                        style="@style/RadionButton"
                        android:visibility="invisible"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/save_data" />
                    <TextView
                        style="@style/RadionButton"
                        android:visibility="invisible"
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:background="@color/color_bg_selected"
                        android:text="@string/save_data" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</FrameLayout>